--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         .then(data => {
           console.log(data)
 
-          document.getElementById('status').innerHTML = data.isRecording && 'Recording status: END'
+          document.getElementById('status').innerHTML = data.isRecording && 'Recording status: START'
 
         })
         .catch(error => console.error('Error:', error));
