--- a/public/pages/login-panel.html
+++ b/public/pages/login-panel.html
@@ -13,20 +13,36 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
 </head>
 
 <body>
   <main>
-    <h2 id="stream-status">Stream Offline</h2>
 
-    <video id="video" class="hide" controls>
-      <source src="hls/stream.m3u8" type="application/x-mpegURL">
-      Your browser does not support the video tag.
-    </video>
+    <section>
+      <h2>Panel logowania:</h2>
+      <form id="loginForm" class="mt-4">
+        <div class="mb-3">
+          <label for="username" class="form-label">Login</label>
+          <input type="text" id="username" class="form-control"
+            required />
+        </div>
+
+        <div class="mb-3">
+          <label for="password" class="form-label">Hasło</label>
+          <input type="password" id="password" class="form-control"
+            required />
+        </div>
+
+        <button type="submit" class="btn btn-primary">Zaloguj</button>
+      </form>
+      <div id="message"></div>
+    </section>
+
   </main>
+
+  <script src="../js/login.js"></script>
 </body>
-<script src="js/stream.js"></script>
 
 </html>
