removed button recorder

--- a/public/pages/panel-admin.html
+++ b/public/pages/panel-admin.html
@@ -23,31 +23,27 @@
 
     <section class="mb-4">
       <h2 id="stream-status" class="mt-3">Stream Offline</h2>
-      <button id="startStream" class="btn btn-dark">Rozpocznij
-        streaming</button>
-      <button id="endStream" class="btn btn-danger hide">Zakończ
-        streaming</button>
+
+      <div class="d-flex">
+        <button id="startStream" class="btn btn-dark">Rozpocznij
+          streaming</button>
+
+        <button id="endStream" class="btn btn-danger hide">Zakończ
+          streaming</button>
+
+        <div id="status-wrapper">
+          <span>Status nagrywania:&nbsp;</span>
+          <span id="status"></span>
+          <span id="light" class="recording-light"></span>
+        </div>
+
+      </div>
     </section>
 
     <video id="video" class="hide" controls>
       <source src="hls/stream.m3u8" type="application/x-mpegURL">
       Your browser does not support the video tag.
     </video>
-
-    <section class="navigation-panel mt-3 hide">
-      <div>
-        <button id="startRecordingButton"
-          class="btn btn-success">Rozpocznij nagywanie</button>
-        <button id="endRecordingButton" class="btn btn-danger">Zakończ
-          nagrywanie</button>
-      </div>
-
-      <div id="status-wrapper">
-        <span>Status nagrywania:&nbsp;</span>
-        <span id="status"></span>
-        <span id="light" class="recording-light"></span>
-      </div>
-    </section>
 
   </main>
 
