--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Stream z posiedzenia rady</title>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="//cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -27,6 +27,6 @@
     </video>
   </main>
 </body>
-<script src="js/stream.js"></script>
+<script type="module" src="js/stream/index.js"></script>
 
 </html>
