--- a/public/pages/login-panel.html
+++ b/public/pages/login-panel.html
@@ -3,7 +3,6 @@
 
 <head>
   <title>Stream z posiedzenia rady</title>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -19,7 +18,6 @@
 
 <body>
   <main>
-
     <section>
       <h2>Panel logowania:</h2>
       <form id="loginForm" class="mt-4">
@@ -42,7 +40,7 @@
 
   </main>
 
-  <script src="../js/login.js"></script>
+  <script type="module" src="../js/login/index.js"></script>
 </body>
 
 </html>
