--- a/public/pages/panel-admin.html
+++ b/public/pages/panel-admin.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Panel nagrywania</title>
-  <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <script src="//cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
@@ -22,7 +22,13 @@
     <button id="logoutButton" class="btn btn-light">Wyloguj</button>
 
     <section class="mb-4">
-      <h2 id="stream-status" class="mt-3">Stream Offline</h2>
+      <h2 id="stream-status" class="mt-3">Stream offline</h2>
+
+      <div id="status-wrapper" class="hide">
+        <span>Nagrywanie&nbsp;</span>
+        <span id="light"
+          class="recording-light blinking-light"></span>
+      </div>
 
       <div class="d-flex">
         <button id="startStream" class="btn btn-dark">Rozpocznij
@@ -31,11 +37,6 @@
         <button id="endStream" class="btn btn-danger hide">Zakończ
           streaming</button>
 
-        <div id="status-wrapper">
-          <span>Status nagrywania:&nbsp;</span>
-          <span id="status"></span>
-          <span id="light" class="recording-light"></span>
-        </div>
 
       </div>
     </section>
@@ -47,8 +48,8 @@
 
   </main>
 
-  <script src="../js/panel.js"></script>
-  <script src="../js/stream.js"></script>
+  <script type="module" src="../js/panel/index.js"></script>
+  <script type="module" src="../js/stream/index.js"></script>
 </body>
 
 </html>
