--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
       <source src="hls/stream.m3u8" type="application/x-mpegURL">
       Your browser does not support the video tag.
     </video>
+    <div id="captions"></div>
   </main>
 </body>
 <script type="module" src="js/stream/index.js"></script>
