--- a/public/pages/panel-admin.html
+++ b/public/pages/panel-admin.html
@@ -45,6 +45,7 @@
       <source src="hls/stream.m3u8" type="application/x-mpegURL">
       Your browser does not support the video tag.
     </video>
+    <div id="captions"></div>
 
   </main>
 
