--- a/public/pages/login-panel.html
+++ b/public/pages/login-panel.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Stream z posiedzenia rady</title>
+  <title>Logowanie-Transmisja Sesji Rady Powiatu</title>
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
     rel="stylesheet"
