--- a/public/app/index.html
+++ b/public/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Panel zarządzania-Transmisja Sesji Rady Powiatu Brzeziny</title>
+    <title>Transmisja Sesji Rady Powiatu Brzeziny</title>
     <script src="//cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
@@ -16,49 +16,18 @@
     ></script>
     <link rel="stylesheet" href="../style.css" />
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <meta name="”robots”" content="”noindex”" />
   </head>
 
   <body>
-    <header class="bg-dark d-flex justify-content-between align-items-center mb-4 p-3">
-      <h1 class="text-white mb-0">Panel zarządzania transmisją</h1>
-      <button id="logoutButton" class="btn btn-light">Wyloguj</button>
+    <header class="d-flex align-items-center p-3 border-bottom border-dark-subtle">
+      <h1>Transmisja z Sesji Rady Powiatu Brzeziny</h1>
     </header>
 
     <main>
-      <section class="mb-4 text-center">
-        <h2 id="stream-status" class="mt-3">Transmisja offline</h2>
-        <div id="camera-name"></div>
+      <h2 id="stream-status" class="text-center">Transmisja offline</h2>
 
-        <div id="choose-camera" class="container mb-5 mt-5">
-          <form id="camera-form" class="row">
-            <label for="camera-first" class="col container">
-              <input id="camera-first" type="radio" name="camera" checked value="camera-first" />
-              <span class="checkmark">Kamera 1</span>
-            </label>
-
-            <label for="camera-second" class="col container">
-              <input id="camera-second" type="radio" name="camera" value="camera-second" />
-              <span class="checkmark">Kamera 2</span>
-            </label>
-          </form>
-        </div>
-
-        <div id="status-wrapper" class="hide d-flex justify-content-center align-items-center">
-          <span>Nagrywanie&nbsp;</span>
-          <span id="light" class="recording-light blinking-light"></span>
-        </div>
-
-        <div class="d-flex justify-content-center">
-          <button id="startStream" class="btn btn-dark">Rozpocznij transmisje</button>
-
-          <button id="endStream" class="btn btn-danger hide">Zakończ transmisje</button>
-        </div>
-      </section>
-
-      <section id="video-wrapper" class="hide">
-        <div id="captions-container">
-          <div id="captions"></div>
-        </div>
+      <div id="video-wrapper" class="hide">
         <button id="btn-fullscrean" class="btn">
           <svg version="1.1" viewBox="0 0 36 36">
             <path d="m 10,16 2,0 0,-4 4,0 0,-2 L 10,10 l 0,6 0,0 z"></path>
@@ -86,10 +55,9 @@
           <source src="hls/stream.m3u8" type="application/x-mpegURL" />
           Your browser does not support the video tag.
         </video>
-      </section>
+        <div id="captions"></div>
+      </div>
     </main>
-
-    <script type="module" src="../js/panel/index.js"></script>
-    <script type="module" src="../js/stream/index.js"></script>
   </body>
+  <script type="module" src="../js/stream/index.js"></script>
 </html>
