ui: updated camera names

--- a/public/pages/panel-admin.html
+++ b/public/pages/panel-admin.html
@@ -33,12 +33,18 @@
           <form id="camera-form" class="row">
             <label for="camera-first" class="col container">
               <input id="camera-first" type="radio" name="camera" checked value="camera-first" />
-              <span class="checkmark">Kamera 1</span>
+              <span class="checkmark">
+                <div>Kamera 1</div>
+                <div>Urząd Miasta</div>
+              </span>
             </label>
 
             <label for="camera-second" class="col container">
               <input id="camera-second" type="radio" name="camera" value="camera-second" />
-              <span class="checkmark">Kamera 2</span>
+              <span class="checkmark">
+                <div>Kamera 2</div>
+                <div>Sala Kilińskiego</div>
+              </span>
             </label>
           </form>
         </div>
